err/datahub.gov.dot.nhtsa.recall.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/datahub'...
Listing './lib/python3.5/site-packages/datahub/gov'...
Listing './lib/python3.5/site-packages/datahub/gov/dot'...
Listing './lib/python3.5/site-packages/datahub/gov/dot/nhtsa'...
Listing './lib/python3.5/site-packages/datahub/gov/dot/nhtsa/recall'...
Listing './lib/python3.5/site-packages/datahub/gov/dot/nhtsa/recall/crawl'...
Listing './lib/python3.5/site-packages/datahub/gov/dot/nhtsa/recall/hdf5'...
Listing './lib/python3.5/site-packages/datahub/gov/dot/nhtsa/recall/load'...
Compiling './lib/python3.5/site-packages/datahub/gov/dot/nhtsa/recall/load/load.py'...
***   File "./lib/python3.5/site-packages/datahub/gov/dot/nhtsa/recall/load/load.py", line 98
    print 'saving %dth row' %j
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/datahub/gov/dot/nhtsa/recall/parse'...
Listing './lib/python3.5/site-packages/datahub/gov/dot/nhtsa/recall/web'...
Listing './lib/python3.5/site-packages/datahub.gov.dot.nhtsa.recall-0.2.dev0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
